# Razer-Linux_razer-laptop-control-no-dkms

razer_control_gui/: Cargo.toml
